attempt to cut out org.apache.commons.beanutils from logging

--- a/ExcelTemplateEngine/src/main/resources/log4j.properties
+++ b/ExcelTemplateEngine/src/main/resources/log4j.properties
@@ -1,6 +1,7 @@
 #log4j.rootLogger=INFO, ROLLING_FILE, stdout
 log4j.rootLogger=DEBUG, ROLLING_FILE, stdout
 org.apache.commons.beanutils=ERROR
+org.apache.commons.beanutils.converters=ERROR
 log4j.logger.com.opensymphony.xwork2=ERROR, ROLLING_FILE, stdout
 
 # turn ON/OFF hibernate sql trace
