--- a/ExcelTemplateEngine/src/test/resources/log4j.properties
+++ b/ExcelTemplateEngine/src/test/resources/log4j.properties
@@ -1,6 +1,5 @@
 #log4j.rootLogger=INFO, ROLLING_FILE, stdout
 log4j.rootLogger=DEBUG, ROLLING_FILE, stdout
-org.apache.commons.beanutils=ERROR
 log4j.logger.com.opensymphony.xwork2=ERROR, ROLLING_FILE, stdout
 
 # turn ON/OFF hibernate sql trace
@@ -10,10 +9,12 @@ log4j.logger.com.opensymphony.xwork2=ERROR, ROLLING_FILE, stdout
 #log4j.logger.org.hibernate.type=WARN
 
 
-# turn ON/OFF 
+# turn ON/OFF logging to particular packages 
+# 'log4j.logger.' followed by package for example org.apache.commons.beanutils 
 log4j.logger.ca.canon.fast=DEBUG
 log4j.logger.ca.canon.fast.service=DEBUG
 log4j.logger.org.springframework.test.context=DEBUG
+log4j.logger.org.apache.commons.beanutils=ERROR
 
 log4j.appender.debug=org.apache.log4j.ConsoleAppender
 log4j.appender.debug.layout=org.apache.log4j.PatternLayout
