--- a/ExcelTemplateEngine/pom.xml
+++ b/ExcelTemplateEngine/pom.xml
@@ -6,11 +6,24 @@
   <name>ExcelTemplate</name>
   <description>Read write Excel file by Template</description>
   <dependencies>
-  	<dependency>
+  	<!-- dependency>
   		<groupId>org.apache.poi</groupId>
   		<artifactId>poi</artifactId>
   		<version>3.0.1-FINAL</version>
-  	</dependency>
+  	</dependency -->
+  	
+  	<dependency>
+		<groupId>org.apache.poi</groupId>
+		<artifactId>poi</artifactId>
+		<version>3.10-FINAL</version>
+	</dependency>
+  	<dependency>
+    	<groupId>log4j</groupId>
+    	<artifactId>log4j</artifactId>
+    	<version>1.2.17</version>
+    	<scope>provided</scope>
+    </dependency>
+  	
   	<dependency>
   		<groupId>commons-beanutils</groupId>
   		<artifactId>commons-beanutils</artifactId>
