--- a/ExcelTemplateEngine/pom.xml
+++ b/ExcelTemplateEngine/pom.xml
@@ -23,7 +23,11 @@
     	<version>1.2.17</version>
     	<scope>provided</scope>
     </dependency>
-  	
+  	<dependency>
+  		<groupId>com.google.code.gson</groupId>
+  		<artifactId>gson</artifactId>
+  		<version>2.2.4</version>
+  	</dependency>
   	<dependency>
   		<groupId>commons-beanutils</groupId>
   		<artifactId>commons-beanutils</artifactId>
